# ds-practice-2025

./: .gitignore  README.adoc  docker-compose.yaml  generate_protos.sh  pyproject.toml
database/: Dockerfile
database/src/: app.py  crud
docs/: README.md  tmp.html
docs/diagrams/: init_sequence.plantuml  peer_sync_sequence.plantuml  que_handoff_sequence.plantuml  website_sequence.plantuml
fraud_detection/: Dockerfile
fraud_detection/src/: app.py  fraud_detection
frontend/: Dockerfile
orchestrator/: Dockerfile  requirements.txt
orchestrator/src/: app.py
order_executor/: Dockerfile
order_executor/src/: app.py  bullying.py  heartbeat.py  order_executor  order_queue
order_queue/: Dockerfile  requirements.txt
order_queue/src/: app.py  order_queue.proto  order_queue_pb2.py  order_queue_pb2.pyi
suggestions/: .env  Dockerfile  requirements.txt  test
suggestions/src/: app.py  book.py  goodreads.py  suggestions
transaction_verification/: Dockerfile
transaction_verification/src/: app.py  broadcast  transaction_verification
utils/: broadcast.py
utils/other/: broadcast.py  broadcast_service.py  orderResult.py  orderStateManager.py
utils/pb/broadcast/: broadcast.proto  broadcast_pb2.py  broadcast_pb2.pyi  broadcast_pb2_grpc.py
utils/pb/crud/: crud.proto  crud_pb2.py  crud_pb2.pyi  crud_pb2_grpc.py
utils/pb/fraud_detection/: fraud_detection.proto  fraud_detection_pb2.py  fraud_detection_pb2.pyi  fraud_detection_pb2_grpc.py
utils/pb/order_executor/: bullying.proto  bullying_pb2.py  bullying_pb2.pyi  bullying_pb2_grpc.py
(+12 files in other folders)
